# bootstrap-cmake-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: version.cmake
src/: main.c  version.h
